--- a/Literature_Review/LiteratureReview_vks.Rmd
+++ b/Literature_Review/LiteratureReview_vks.Rmd
@@ -14,7 +14,7 @@ Bernhardt et al (2008) is an examination of the effects of media bias. It examin
 
 Stone (2011) presents the counterintuitive thesis that bias can be more prevalent in certain competitive media markets than in some less competitive ones. It presents a formal proof that consumers can, for example, be less informed in some media duopolies than in some monopolies. Thus one must guard against simplistic prescriptions on how to counter bias, since its correlations with market conditions can be contrary to intuition.
 
-Baum and Groeling (2012) suggest that the advent of internet media removed the professional editorial process from news content. The new "partisan" styled editorial system of the internet media paired with the public's adoption of internet media produced more fragmented audience. Baum and Groeling study found that left-skewed and right-skewed political biases exist in internet media content. This shift from bipartisan to partisan coverage has important implications for political discourse in America and may impact the decision making for many Americans.
+Baum and Groeling (2008) suggest that the advent of internet media removed the professional editorial process from news content. The new "partisan" styled editorial system of the internet media paired with the public's adoption of internet media produced more fragmented audience. Baum and Groeling study found that left-skewed and right-skewed political biases exist in internet media content. This shift from bipartisan to partisan coverage has important implications for political discourse in America and may impact the decision making for many Americans.
 
 Gentzkow and Shapiro (2014) examine the accuracy and trust in media. They explain how that different media outlets select, discuss and present facts in ways that tend to systematically favor one side of the political spectrum. These biases can be a result of a multitude of different media components. Supply-side bias persists when media management or labor are willing to sacrifice profits for political gain. Demand-side bias persists when consumers perceive biased media to be more informative or more enjoyable. Like Baum and Groeling, Gentzkow and Shapiro believe these differences can have large effects on voter behavior, public perception and political outcomes. However, it is very difficult to determine the measured impact of these biases. 
 
@@ -33,7 +33,7 @@ Gentzkow and Shapiro (2014) examine the accuracy and trust in media. They explai
 6. Groseclose, T., Milyo, J. (2005). A measure of media bias. The Quarterly Journal of Economics, CXX (4), 1191-1237. 
 http://itre.cis.upenn.edu/~myl/GrosecloseMilyo.pdf
 
-7. Baum and Groeling (2008) investigate issue filtering
+7. Baum and Groeling (2008). New Media and the Polarization of American Political Discourse.
 https://journalistsresource.org/wp-content/uploads/2012/03/News-Media-and-Polarization-Matt-Baum_Political-Communication-LK.pdf
 
 8. Lin, Bagrow and Lazer (2011). More Voices Than Ever? Quantifying Media Bias in Networks. https://arxiv.org/pdf/1111.1227.pdf
