added twitter analysis writeup

--- a/Literature_Review/LiteratureReview_vks.Rmd
+++ b/Literature_Review/LiteratureReview_vks.Rmd
@@ -20,6 +20,8 @@ Gentzkow and Shapiro (2014) examine the accuracy and trust in media. They explai
 
 Lin, Bagrow and Lazer (2011) propose a method of quantifying bias in both traditional news media and internet blogs. Their method is primarily based on comparing the number of references to members of the US Congress, thus avoiding errors due to subjective criteria such as sentiment and degrees of bias. They describe methods to measure how bias varies over time. They also measure links between blog articles and how media outlets with different slants link to each other. They conclude that internet blogs are "more social", i.e. more influened by the network of sites that they are connected to, and more "exogenous", meaning their coverage is more influenced by external factors such as election cycles.
 
+Oconnor, Balasubramanyan, Routledge and Smith sought to test how well twitter sentiment analysis correlates with consumer confidence polling data as well as presidential approval/election polling data.  They built a sentiment analysis based on a lexicon from OpinionFinder on a a subset of twitter data relating to several political topics in 2008-2009 (jobs, Obama, Mccain ).  The sentiment score was a ratio of positive to negative words.  The sentiment data was extremely noisy, so they used smoothing averages to clean out some of the noise to determine correlation.  They found techniques like stemming caused dangerous misclassification over their lexicon (in particular stemming jobs to job) but that overall this did nto substantially effect the aggregated scoring composites.  Results were mixed with the sentiment analysis doing well predicting the economic indicators, but not as well at predicting the presidential approval polls.      
+
 ### References
 
 1. Sheth, Dev. "Measuring Ideological Bias in News Coverage of Political Events by Print Media Using Data Analytics." Rochester Institute of Technology , 2016, pp. 1-21.
