--- a/Literature_Review/LiteratureReview_vks.Rmd
+++ b/Literature_Review/LiteratureReview_vks.Rmd
@@ -22,6 +22,8 @@ Lin, Bagrow and Lazer (2011) propose a method of quantifying bias in both tradit
 
 Oconnor, Balasubramanyan, Routledge and Smith sought to test how well twitter sentiment analysis correlates with consumer confidence polling data as well as presidential approval/election polling data.  They built a sentiment analysis based on a lexicon from OpinionFinder on a a subset of twitter data relating to several political topics in 2008-2009 (jobs, Obama, Mccain ).  The sentiment score was a ratio of positive to negative words.  The sentiment data was extremely noisy, so they used smoothing averages to clean out some of the noise to determine correlation.  They found techniques like stemming caused dangerous misclassification over their lexicon (in particular stemming jobs to job) but that overall this did nto substantially effect the aggregated scoring composites.  Results were mixed with the sentiment analysis doing well predicting the economic indicators, but not as well at predicting the presidential approval polls.      
 
+Sutter argues that journalism, the transmission engine for ideas and information in society, is inherently subjective and often reflects the opinions of the journalist or news outlet. However, the evidence to prove this bias is circumstantial. Sutter notes that revenue is a controlling force for limiting or reducing bias in privately owned news media organizations. He argues that the inclusion of too much bias in reporting can adversely affect the readership and advertising revenue for the news organization.
+
 ### References
 
 1. Sheth, Dev. "Measuring Ideological Bias in News Coverage of Political Events by Print Media Using Data Analytics." Rochester Institute of Technology , 2016, pp. 1-21.
