--- a/Literature_Review/LiteratureReview_vks.Rmd
+++ b/Literature_Review/LiteratureReview_vks.Rmd
@@ -16,6 +16,8 @@ Stone (2011) presents the counterintuitive thesis that bias can be more prevalen
 
 Baum and Groeling (2008) suggest that the advent of internet media removed the professional editorial process from news content. The new "partisan" styled editorial system of the internet media paired with the public's adoption of internet media produced more fragmented audience. Baum and Groeling study found that left-skewed and right-skewed political biases exist in internet media content. This shift from bipartisan to partisan coverage has important implications for political discourse in America and may impact the decision making for many Americans.
 
+Groceclose and Milyo (2005) propose a method  to estimate the ADA scores for media outlets, which involves many function that is similar to a multinomial logit. By comparing the citation patterns they construct an ADA score that will simplified example. Since Groseclose and Milyo's measure of bias is restricted to citations of think tank and advocacy groups, this kind of miscategorization is inevitable. Groseclose and Milyo's discussion of the idea of bias assumes that if a reporter quotes a source, then the opinion expressed by that source is an accurate measure of the reporter's beliefs an assumption that most, if not all, reporters across the ideological spectrum would find utterly ridiculous. Their method is primarily based on comparing the liberal group and conservative group based on the average of score of legislators. They also measure links between new outlets media which compute the measure, by counting the times that a media outlet cites various think tanks and other policy groups. But sometimes can submit a false and negative result depending in different media sources.
+
 Gentzkow and Shapiro (2014) examine the accuracy and trust in media. They explain how that different media outlets select, discuss and present facts in ways that tend to systematically favor one side of the political spectrum. These biases can be a result of a multitude of different media components. Supply-side bias persists when media management or labor are willing to sacrifice profits for political gain. Demand-side bias persists when consumers perceive biased media to be more informative or more enjoyable. Like Baum and Groeling, Gentzkow and Shapiro believe these differences can have large effects on voter behavior, public perception and political outcomes. However, it is very difficult to determine the measured impact of these biases. 
 
 Lin, Bagrow and Lazer (2011) propose a method of quantifying bias in both traditional news media and internet blogs. Their method is primarily based on comparing the number of references to members of the US Congress, thus avoiding errors due to subjective criteria such as sentiment and degrees of bias. They describe methods to measure how bias varies over time. They also measure links between blog articles and how media outlets with different slants link to each other. They conclude that internet blogs are "more social", i.e. more influened by the network of sites that they are connected to, and more "exogenous", meaning their coverage is more influenced by external factors such as election cycles.
