updated my scaper, pushed more data, updated meaghan scraper

--- a/Meaghan_scrape.ipynb
+++ b/Meaghan_scrape.ipynb
@@ -792,7 +792,8 @@
     "+ We can deal with duplicates and streamlining the above later\n",
     "+ to demonstrate a working product I feed our url into newspaper 3k \n",
     "+ Id say it takes 5-10 seconds per article to fetch complete text\n",
-    "+ I added error check to catch videos which populates the article with a statement that just reads 'no words found'"
+    "+ I added error check to catch videos which populates the article with a statement that just reads 'no words found'\n",
+    "+ click here for useragent  https://www.whatismybrowser.com/detect/what-is-my-user-agent"
    ]
   },
   {
@@ -802,6 +803,8 @@
    "outputs": [],
    "source": [
     "list_full_text=[]\n",
+    "headers = {'User-Agent': ##'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36'}\n",
+    "\n",
     "for link in Bernie_df['url']:\n",
     "    html = requests.get(link).text\n",
     "    try: text = fulltext(html)\n",
