--- a/Meaghan_scrape.ipynb
+++ b/Meaghan_scrape.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -445,7 +445,7 @@
        "[134 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "'new-york-magazine,the-wall-street-journal,the-huffington-post,the-new-york-times,the-wall-street-journal,the-washington-post'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
       "query will return: 12\n",
       "query will return: 9\n",
       "query will return: 12\n",
-      "query will return: 281\n"
+      "query will return: 290\n"
      ]
     }
    ],
@@ -701,16 +701,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we should expect: 465 articles\n",
+      "we should expect: 474 articles\n",
       "we have: 284 articles\n",
-      "181 results came into query that exceeded 100 hits in a day.  Thus we lose any hit over 100 in a day\n",
+      "190 results came into query that exceeded 100 hits in a day.  Thus we lose any hit over 100 in a day\n",
       "we have 198 unique links\n"
      ]
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "(86, 7)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -774,7 +774,7 @@
        "(284, 7)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,10 +803,10 @@
    "outputs": [],
    "source": [
     "list_full_text=[]\n",
-    "headers = {'User-Agent': ##'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36'}\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.120 Safari/537.36'}\n",
     "\n",
     "for link in Bernie_df['url']:\n",
-    "    html = requests.get(link).text\n",
+    "    html = requests.get(link,headers=headers).text\n",
     "    try: text = fulltext(html)\n",
     "    except: \n",
     "        print(\"no words found\")\n",
